--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,7 @@ RewriteBase /
 RewriteCond %{HTTP:X-HTTPS} !1
 RewriteCond %{HTTP_HOST} ^fukurou\.ru$
 RewriteRule ^(.*)$ https://fukurou.ru/$1 [R=301,L]
+
+<filesMatch ".(jpg|jpeg|png|gif|ico)$">
+Header set Cache-Control "max-age=315360000, public"
+</filesMatch>
